# LearnOpenGL

./: CMakeLists.txt  MSVC_bin2obj.cpp  Readme.md  ResourceBuilder.cpp
builder/: ResourceBuilder.cpp
ctest/: T_CodeCvt.cpp
include/: CodeCvt.hpp  Main.hpp  Render.hpp  Resource.hpp  Shader.hpp  TriRenderer.hpp
src/: CodeCvt.cpp  Render.cpp  Resource.cpp  Shader.cpp  TriRenderer.cpp  main.cpp
